# edm-smart-cities

./: .gitignore  app.py  app2.py  extract_data.sh  main.py  pyproject.toml  requirements.txt  rutas_bisi.ipynb  union.py
data/: valenbici_puntos.csv
model/: lightgbm_23_06_2025.pkl
notebooks/: rutas_bisi.ipynb  valenbisi_forecast.ipynb  valenbisi_neuralforecast.ipynb
src/: app2.py  utils.py
