[project]
name = "edm-smart-cities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "osmnx>=2.0.4",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "streamlit>=1.46.0",
]
